<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="in.omgss.ui.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/dimen_150dp"
        android:layout_height="@dimen/dimen_150dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_label_glad_to_see_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_30dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        app:fontFamily="@font/helvetica_bold"
        android:text="@string/glad_to_see_you"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/dimen_26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_label_please_enter_mobile_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_30dp"
        android:text="@string/please_enter_your_mobile_number_nto_login_with_us"
        android:textColor="@color/colorLightGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_glad_to_see_you" />

    <EditText
        android:id="@+id/et_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_drawable_rect_rounded_corners"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dimen_12dp"
        android:singleLine="true"
        android:layout_margin="@dimen/dimen_20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_please_enter_mobile_number"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/dimen_14sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_drawable_rect_rounded_corners"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="@dimen/dimen_12dp"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        app:layout_constraintTop_toBottomOf="@+id/et_email_address"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/dimen_14sp" />


    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:text="Forgot Password?"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/dimen_14sp"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        android:layout_marginEnd="@dimen/dimen_20dp"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/btn_login"
        style="@style/GreenButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />


    <Button
        android:id="@+id/btn_sign_up"
        android:background="@drawable/drawable_shape_rect_green_stroke"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:textColor="@color/colorAccent"
        android:text="NEW USER? sign up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    <TextView
        android:id="@+id/tv_terms_and_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:text="@string/by_signing_in_you_agreee_to_our_terms_and_conditions"
        android:textColor="@color/colorLightGrey"
        android:textSize="@dimen/dimen_12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>